<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown"
    tools:context=".TaskDetail">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="159dp"
        android:layout_height="47dp"
        android:text="@string/task_detail_text"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.064" />

    <TextView
        android:id="@+id/TASK_TITLE"
        android:layout_width="153dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.143"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/description_header"
        android:layout_width="166dp"
        android:layout_height="45dp"
        android:text="@string/description"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TASK_TITLE" />

    <TextView
        android:id="@+id/DESCRIPTION"
        android:layout_width="218dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/lorem_description"
        android:textSize="14sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_header" />

    <Button
        android:id="@+id/home_Btn"
        android:layout_width="65dp"
        android:layout_height="46dp"
        android:layout_marginBottom="16dp"
        android:background="@color/white"
        android:text="Home"
        android:textColor="@color/brown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/state"
        android:layout_width="135dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DESCRIPTION" />

    <TextView
        android:id="@+id/task_file_id"
        android:layout_width="137dp"
        android:layout_height="46dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:text="Task File"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/state" />

    <TextView
        android:id="@+id/file_link"
        android:layout_width="128dp"
        android:layout_height="46dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:text="ddd"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_file_id" />

    <ImageView
        android:id="@+id/task_img"
        android:layout_width="153dp"
        android:layout_height="135dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/file_link" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="153dp"
        android:layout_height="135dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="92dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/task_img" />

</androidx.constraintlayout.widget.ConstraintLayout>